--- a/app/templates/scripts.html
+++ b/app/templates/scripts.html
@@ -13,7 +13,7 @@
 
 {{if not disableSupportServices}}
 
-	<!-- Don't load Intercom + FullStory for SEO pages -->
+	<!-- Don't load Intercom for SEO pages -->
 	{{if not .Meta.SEO}}
 		<!-- Start of Intercom scripts -->
 		<script ignore-csp>
@@ -24,15 +24,6 @@
 
 		<script ignore-csp>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/wd8xxn47';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
 		<!-- End of Intercom scripts -->
-
-		<!-- Start of FullStory script -->
-		<script ignore-csp>
-			window["_fs_debug"] = false;
-			window["_fs_host"] = "www.fullstory.com";
-			window["_fs_org"] = "WQW7";
-			(function(m,n,e,t,l,o,g,y){g=m[e]=function(a,b){g.q?g.q.push([a,b]):g._api(a,b);};g.q=[];o=n.createElement(t);o.async=1;o.src="https://"+_fs_host+"/s/fs.js";y=n.getElementsByTagName(t)[0];y.parentNode.insertBefore(o,y);g.identify=function(i,v){g(l,{uid:i});if(v)g(l,v)};g.setUserVars=function(v){FS(l,v)};g.identifyAccount=function(i,v){o="account";v=v||{};v.acctId=i;FS(o,v)};g.clearUserCookie=function(d,i){d=n.domain;while(1){n.cookie="fs_uid=;domain="+d+";path=/;expires="+new Date(0);i=d.indexOf(".");if(i<0)break;d=d.slice(i+1)}}})(window,document,"FS","script","user");
-		</script>
-		<!-- End of FullStory script -->
 	{{end}}
 
 	<!-- Start of Optimizely script -->
