--- a/app/templates/scripts.html
+++ b/app/templates/scripts.html
@@ -28,6 +28,10 @@
 
 		<script ignore-csp>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/wd8xxn47';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
 		<!-- End of Intercom scripts -->
+
+		<!-- Start of HubSpot Embed Code -->
+		<script ignore-csp type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/2762526.js"></script>
+		<!-- End of HubSpot Embed Code -->
 	{{end}}
 
 	<!-- Start of Google Analytics script -->
