--- a/ui/web_modules/sourcegraph/blob/styles/Monaco.css
+++ b/ui/web_modules/sourcegraph/blob/styles/Monaco.css
@@ -135,8 +135,10 @@
 	color: white;
 }
 
-:global .vs-dark .monaco-tree .focused,
-:global .vs-dark .monaco-tree .selected {
+/* TODO: (@chexee): move to viewlet file */
+
+:global .explorer-viewlet .monaco-tree .focused,
+:global .explorer-viewlet .monaco-tree .selected {
 	background-color: c_blue_text !important;
 	color: white;
 	font-weight: bold;
@@ -573,23 +575,6 @@
 	padding-right: 0px !important;
 }
 
-:global .sg-sidebar .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .sidebar-references {
-	text-overflow: ellipsis;
-	overflow: hidden;
-}
-
-:global .sg-sidebar .monaco-tree .monaco-tree-rows > .monaco-tree-row {
-	color: #233043;
-	cursor: pointer;
-	overflow: hidden !important;
-	width: 100%;
-	touch-action: none;
-	padding-left: 16px !important;
-	padding-right: 13px !important;
-	white-space: nowrap !important;
-	text-overflow: ellipsis !important;
-}
-
 :global .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .sidebar-references > .code-content > .function {
 	padding-top: 12px;
 	text-overflow: ellipsis;
@@ -632,26 +617,6 @@
 	width: 100%;
 	height: 1px;
 	background-color: rgba(201, 211, 227, 0.3);
-}
-
-:global .vs-dark .sg-sidebar .monaco-tree div.monaco-tree-row:hover:not(.highlighted):not(.selected):not(.focused) {
-  background-color: #1893e7;
-  color: white;
-}
-
-:global .vs-dark .sg-sidebar .monaco-tree div.monaco-tree-row:hover:not(.highlighted):not(.selected):not(.focused) .content > .sidebar-references > .code-content > .function .author-details {
-	color:  #ade0ff;
-}
-
-:global .vs-dark .sg-sidebar .monaco-tree div.monaco-tree-row:hover:not(.highlighted):not(.selected):not(.focused) .content > .sidebar-references > .code-content > .function .file-details {
-	color:  #ade0ff;
-}
-lobalglobal .sg-sidebar .monaco-tree > .monaco-scrollable-element {
-	position: absolute !important;
-	top: 0px;
-	bottom: 0px;
-	left: 0px;
-	right: 0px;
 }
 
 :global .sg-sidebar .monaco-tree {
