Pricing page + private code signup flow (#3268)
* update pricing page, add AfterPrivateCodeSignup modal, add HubSpot form submission

* Update pricing page copy

--- a/ui/web_modules/sourcegraph/page/Page.css
+++ b/ui/web_modules/sourcegraph/page/Page.css
@@ -108,8 +108,12 @@
 }
 .plan {
 	min-width: 150px;
+	position: relative; /* needed to position aligned buttons at bottom of each plan column */
 }
 .plan_box {
+
+}
+.plan_footer {
 
 }
 @media screen and (min-width: 48em) {
@@ -121,6 +125,11 @@
 	.plan_box {
 		composes: mb5 from base;
 		margin-right: 0 !important; /* cancel media query composed rule below */
+	}
+	.plan_footer {
+		position: absolute;
+		top: 100%;
+		width: 100%;
 	}
 }
 @media screen and (max-width: 48em) {
@@ -134,6 +143,9 @@
 		composes: mr4 from base;
 		margin-bottom: 0 !important; /* cancel media query composed rule above */
 		flex: 0 0 150px;
+	}
+	.plan_footer {
+		display: none;
 	}
 	.sprinkle_blue, .sprinkle_purple, .sprinkle_orange {
 		opacity: .2;
@@ -152,6 +164,12 @@
 }
 .amount {
 	font-size: 4.5rem;
+}
+.amount_contact_us {
+	font-size: 1.5rem;
+}
+.amount_per {
+	font-size: 0.75rem;
 }
 .plan_cta {
 	composes: fw6 from typography;
