ui: louder refs CTA style on def tooltips (#3506)

--- a/ui/web_modules/sourcegraph/blob/styles/Monaco.css
+++ b/ui/web_modules/sourcegraph/blob/styles/Monaco.css
@@ -30,6 +30,10 @@
 	background-color: c_cool_dark_gray;
 }
 
+:global .monaco-editor.vs-dark .monaco-editor-hover .hover-row:last-child {
+	color: white;
+}
+
 :global .monaco-editor .context-view {
 	z-index: 100;
 }
