#3517 Add selected, hover states to section headers (#3653)
* Abstract the code that renders reference items and reference headers from refTree

* Use else if to be more explicit.

* Remove excess line

* Add selected state for repository headers

* Add method to setIcon. Handle case when setting a new icon, if one already exists

* Match disclosure color with selected state color

- Use setIcon to use real icon element
- remove base64 SVG
- clearly enumerate disclosure states
- rename setStyles to setGlobalStyles
- Incidentally also addresses #3528

* align icons on internal/external repos the same

* Add hover state

--- a/ui/web_modules/sourcegraph/workbench/styles/leftRightWidget.css
+++ b/ui/web_modules/sourcegraph/workbench/styles/leftRightWidget.css
@@ -7,5 +7,6 @@
 	width: 100%;
 }
 
-:global .monaco-left-right-widget_left { order: 1 }
-:global .monaco-left-right-widget_right { order: 2 }
+:global .monaco-left-right-widget .left-right-widget_icon { margin-right: 0.25rem }
+:global .monaco-left-right-widget .left-right-widget_left { flex: 3 auto; order: 1 }
+:global .monaco-left-right-widget .left-right-widget_right { order: 2 }
