--- a/ui/web_modules/sourcegraph/blob/styles/Monaco.css
+++ b/ui/web_modules/sourcegraph/blob/styles/Monaco.css
@@ -594,3 +594,7 @@
 :global .monaco-editor.vs-dark .view-overlays .selected-text {
 	background-color: #0091ea !important;
 }
+
+:global .monaco-workbench > .editor > .content > .one-editor-silo > .container > .editor-container {
+	height: calc(100% - 45px - 38px) !important;
+}
