--- a/app/templates/scripts.html
+++ b/app/templates/scripts.html
@@ -30,7 +30,7 @@
 		<!-- End of Intercom scripts -->
 
 		<!-- Start of HubSpot Embed Code -->
-		<script ignore-csp type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/2762526.js"></script>
+		<script ignore-csp type="text/javascript" id="hs-script-loader" async src="//js.hs-scripts.com/2762526.js"></script>
 		<!-- End of HubSpot Embed Code -->
 	{{end}}
 
