updates to the footer and case study PDF fix (#3909)
* updates to the footer and case study PDF fix

* removed px comment as per chex's feedback

--- a/ui/web_modules/sourcegraph/components/styles/flexContainer.css
+++ b/ui/web_modules/sourcegraph/components/styles/flexContainer.css
@@ -23,5 +23,5 @@
 .content_start { align-content: flex-start; }
 .content_end { align-content: flex-end; }
 .content_center { align-content: center; }
-.content_between { align-content: between; }
+.content_between { align-content: space-between; }
 .content_stretch { align-content: stretch; }
