--- a/ui/web_modules/sourcegraph/blob/styles/Monaco.css
+++ b/ui/web_modules/sourcegraph/blob/styles/Monaco.css
@@ -598,3 +598,7 @@
 :global .monaco-workbench > .editor > .content > .one-editor-silo > .container > .editor-container {
 	height: calc(100% - 45px - 38px) !important;
 }
+
+:global .global-message-list {
+    position: relative !important;
+}
