sec: strip referrer headers for xsite requests (#4197)

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -7,6 +7,7 @@
 		data-webpack-public-path="{{assetURL ""}}/"
 		>
 		<meta charset="utf-8">
+		<meta name="referrer" content="origin-when-crossorigin">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
