Use VSCode quickopen (#4187)
* WIP: search service

* WIP: remove old quickopen code

* WIP: remove more old quickopen code; support repo search

* WIP: change repo landing watermark message

* WIP: polish some bugs

* WIP: conditionally show global nav actions

Search action in globl nav toggles instead of always showing quickopen.

* WIP: debugging

* WIP: handle jumping to the same repo as the current workspace

* WIP: style quickopen

* WIP: add modal overlay

* WIP: code cleanup

* WIP: more style tweaks

* WIP: query repos from graphql, and stop using indexed revision

* WIP: debug jump to repo edge cases

* WIP: cleanup

* WIP: revendor vscode

* WIP: finish resolving merge conflicts

* fix typo

* fix ctrl+y conflict keybinding warning (plus lint issue in vendored vscode)

* ui: speed up quickopen search-by-filename by performing fast RegExp-based exclusion for common vendored file paths

* ui: speed up jump-to-file: respect query maxResults, only do URI parsing work if file passes common vendored exclusion pattern

* ui: localStorage.logSearchTiming

* ui: allow users to alt-tab then back without losing a search in progress

* ui: update vscode to patch branch

* merged into patch branch

--- a/ui/web_modules/sourcegraph/blob/styles/Monaco.css
+++ b/ui/web_modules/sourcegraph/blob/styles/Monaco.css
@@ -610,3 +610,78 @@
 :global .monaco-workbench > .part.statusbar > .statusbar-item a:not([disabled]):not(disabled) {
 	color: rgba(255, 255, 255, 0.9);
 }
+
+/* Quickopen */
+
+:global .quick-open-widget {
+	background-color: rgb(35, 48, 67) !important;
+	box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5) !important;
+	z-index: 50; /* so it is above the modal overlay */
+	border-radius: 0px 0px 3px 3px !important;
+}
+
+:global .quick-open-widget .quick-open-input {
+	max-width: 586px !important;
+	padding: 8px !important;
+	padding-top: 10px !important;
+	height: 58px;
+}
+
+:global .quick-open-widget .progress-container {
+	top: 57px !important;
+}
+
+:global .quick-open-widget input {
+	background-color: rgb(62, 87, 121) !important;
+	padding: 8px !important;
+	color: white !important;
+	height: 40px !important;
+	border-radius: 3px !important;
+}
+
+:global .quick-open-widget input::placeholder {
+	color: rgb(201, 212, 227) !important;
+}
+
+:global .quick-open-widget input:focus {
+	outline: none !important;
+}
+
+:global .quick-open-widget .quick-open-input .monaco-inputbox {
+	height: 40px !important;
+}
+
+:global .quick-open-widget .monaco-tree-row {
+	height: 40px !important;
+	color: white !important;
+}
+
+:global .quick-open-widget .monaco-tree-row .quick-open-help-entry-label {
+	color: blue !important;
+}
+
+:global .quick-open-widget .monaco-tree-row .content {
+	display: flex;
+	align-items: center;
+	padding: 10px;
+}
+
+:global .quick-open-widget .monaco-tree-row .results-group-separator {
+	margin-left: 0px;
+}
+
+:global .quick-open-widget .monaco-tree-row .results-group {
+	display: none;
+}
+
+:global .quick-open-widget .monaco-tree-row.focused {
+	background-color: rgb(62, 87, 121) !important;
+}
+
+:global .quick-open-widget div.monaco-tree-row:hover {
+	background-color: rgb(62, 87, 121) !important;
+}
+
+:global .quick-open-widget .monaco-tree-row .results-group-separator {
+	border-top: none;
+}
