Make websocket origin configurable (#4480)
* minor: some missing comments

* ui: Pass in wsOrigin via jscontext

We want to be able to configure the websocket origin so we can bypass the CDN. I
am not sure why we can't use the context module directly, and instead have to
use `self`.

--- a/app/templates/scripts.html
+++ b/app/templates/scripts.html
@@ -1,6 +1,6 @@
 {{define "Scripts"}}
 
-{{/* Do not access these directly via the window object, import them using context.js. */}}
+{{/* Do not access these directly via the window object, import them using context.tsx. */}}
 <script ignore-csp type="text/javascript">
 	window.__sourcegraphJSContext = {{if .JSCtx}}JSON.parse({{.JSCtx|json}}){{else}}null{{end}}
 </script>
