--- a/app/templates/scripts.html
+++ b/app/templates/scripts.html
@@ -1,6 +1,6 @@
 {{define "Scripts"}}
 
-{{/* Do not access these directly via the window object, import them using context.tsx. */}}
+{{/* Do not access these directly via the window object, import them using context.js. */}}
 <script ignore-csp type="text/javascript">
 	window.__sourcegraphJSContext = {{if .JSCtx}}JSON.parse({{.JSCtx|json}}){{else}}null{{end}}
 </script>
