metrics: comment out optimizely (#4569)

--- a/app/templates/scripts.html
+++ b/app/templates/scripts.html
@@ -11,11 +11,10 @@
 </script>
 <!-- End of Telligent scripts-->
 
-<!-- Start of Optimizely script -->
-<script ignore-csp src="https://cdn.optimizely.com/js/8155070806.js"></script>
-<!-- End of Optimizely script -->
-
 {{if not disableSupportServices}}
+	<!-- Start of Optimizely script -->		
+	<!-- <script ignore-csp src="https://cdn.optimizely.com/js/8155070806.js"></script>	-->
+	<!-- End of Optimizely script -->
 
 	<!-- Don't load Intercom for SEO pages -->
 	{{if not .Meta.SEO}}
