--- a/ui/web_modules/sourcegraph/blob/styles/Monaco.css
+++ b/ui/web_modules/sourcegraph/blob/styles/Monaco.css
@@ -133,8 +133,6 @@
 	flex:none;
 }
 
-
-
 /* Style Code lens */
 
 :global div.monaco-editor .codelens-decoration {
@@ -246,7 +244,7 @@
 	height: 100%;
 }
 
-:global .monaco-editor.vs-dark	.bracket-match {
+:global .monaco-editor.vs-dark .bracket-match {
 	display: none
 }
 
@@ -444,4 +442,14 @@
 
 :global .monaco-workbench > .part.statusbar > .statusbar-item > .dropdown.send-feedback > .dropdown-label.send-feedback:hover {
 	background-image: url("data:image/svg+xml,%3Csvg fill='%2393a9c8' viewBox='8 8 48 48' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cdefs%3E%3Cpath d='M43.25 38c-1.4 0-4.12 4-11.25 4s-9.86-4-11.25-4c-.4-.03-.72.26-.75.65v.1c0 1.3 4.5 7.25 12 7.25s12-5.96 12-7.25c.03-.4-.26-.72-.65-.75h-.1M40 24c-2.67 0-4 3.1-4 6 0 1.3.17 2 .75 2 1.2 0 1.66-1 3.25-1 1.6 0 2.05 1 3.25 1 .58 0 .75-.7.75-2 0-2.9-1.33-6-4-6m-16 0c-2.67 0-4 3.1-4 6 0 1.3.17 2 .75 2 1.2 0 1.66-1 3.25-1 1.6 0 2.05 1 3.25 1 .58 0 .75-.7.75-2 0-2.9-1.33-6-4-6m8 32C18.75 56 8 45.26 8 32 8 18.75 18.75 8 32 8c13.26 0 24 10.75 24 24 0 13.26-10.74 24-24 24' id='a'/%3E%3C/defs%3E%3Cuse fill-rule='evenodd' xlink:href='%23a'/%3E%3C/svg%3E") !important;
+}
+
+/* SCM Viewlet */
+:global .scm-editor {
+	display: none;
+}
+
+:global .scm-status .monaco-list-row {
+	line-height: 30px;
+	font-size: 1rem;
 }
