--- a/ui/web_modules/sourcegraph/workbench/styles/leftRightWidget.css
+++ b/ui/web_modules/sourcegraph/workbench/styles/leftRightWidget.css
@@ -1,4 +1,4 @@
-:global .monaco-left-right-widget {
+:global .refs-repository-title .monaco-left-right-widget {
 	align-items: center;
 	display: flex;
 	flex-direction: row;
@@ -7,6 +7,6 @@
 	width: 100%;
 }
 
-:global .monaco-left-right-widget .left-right-widget_icon { margin-right: 0.25rem }
-:global .monaco-left-right-widget .left-right-widget_left { flex: 3 auto; order: 1 }
-:global .monaco-left-right-widget .left-right-widget_right { order: 2 }
+:global .refs-repository-title .monaco-left-right-widget .left-right-widget_icon { margin-right: 0.25rem }
+:global .refs-repository-title .monaco-left-right-widget .left-right-widget_left { flex: 3 auto; order: 1 }
+:global .refs-repository-title .monaco-left-right-widget .left-right-widget_right { order: 2 }
