styles zap selected file

--- a/ui/web_modules/sourcegraph/blob/styles/Monaco.css
+++ b/ui/web_modules/sourcegraph/blob/styles/Monaco.css
@@ -134,6 +134,11 @@
 	margin-top:4px;
 }
 
+:global .vs-dark .monaco-list .monaco-list-row.selected {
+	font-weight:bold;
+	background:rgba(0, 145, 234);
+}
+
 /* Style Code lens */
 
 :global div.monaco-editor .codelens-decoration {
