--- a/ui/web_modules/sourcegraph/blob/styles/Monaco.css
+++ b/ui/web_modules/sourcegraph/blob/styles/Monaco.css
@@ -216,9 +216,9 @@
 	overflow: initial !important;
 }
 
-:global #workbench\.parts\.editor {
+/*:global #workbench\.parts\.editor {
 	box-shadow: -2px 0 3px 0px rgba(0,0,0,0.1);
-}
+}*/
 
 :global .monaco-menu-container .monaco-menu {
 	background: white;
@@ -461,7 +461,10 @@
 }
 
 /* Shadow Overrides */
-.vs-dark .monaco-workbench .monaco-scrollable-element .shadow.top,
-.monaco-scrollable-element > .shadow.top {
+:global .vs-dark .monaco-workbench .monaco-scrollable-element .shadow.top,
+:global .monaco-scrollable-element > .shadow.top,
+:global .monaco-editor.vs-dark .scroll-decoration,
+:global .monaco-workbench > .part.statusbar {
 	box-shadow:none !important;
 }
+
