--- a/ui/web_modules/sourcegraph/workbench/styles/searchViewlet.css
+++ b/ui/web_modules/sourcegraph/workbench/styles/searchViewlet.css
@@ -1,9 +1,19 @@
+@value colors "sourcegraph/components/styles/_colors.css";
+@value c_cool_gray, c_cool_mid_gray, c_cool_dark_gray, c_cool_dark_gray_2 from colors;
+
+@value input_group_height: 72px;
+
+:global .search-viewlet .search-widgets-container {
+	padding: 0;
+	margin: 0;
+}
+
 :global .search-viewlet .linematch {
 	line-height: 40px !important;
 }
 
 :global .search-viewlet .sub-content:not(.linematch) {
-	padding-top: 10px;
+	padding-top: 8px;
 }
 
 :global .search-viewlet .primary-action-bar .actions-container {
@@ -17,33 +27,94 @@
 :global .search-viewlet .findInFileMatch,
 :global .monaco-editor .findInFileMatch,
 :global .monaco-editor .findMatch {
-	background-color: #5d7eac !important;
+	background-color: c_cool_dark_gray_2 !important;
+}
+
+:global .search-viewlet .search-container.input-box {
+	margin: 0;
+	background: transparent;
 }
 
 :global .search-viewlet .monaco-findInput {
-	--input-bgcolor: #233043 !important;
-	background-color: #233043 !important;
+	--input-bgcolor: c_cool_dark_gray !important;
+	background-color: c_cool_dark_gray !important;
 	padding: 8px;
+	margin: 16px;
 	border-radius: 2px;
+	width: 268px !important;
 }
 
 :global .search-viewlet .monaco-findInput .controls {
-	top: 10px !important;
+	display: none;
 }
 
 :global .search-viewlet .monaco-findInput input {
+	color: white !important;
 	font-size: 1rem !important;
 	outline: none;
 }
 
+:global .search-viewlet .monaco-findInput input::-webkit-input-placeholder { opacity: 0; }
+:global .search-viewlet .monaco-findInput .input::-moz-placeholder { opacity: 0; }
+:global .search-viewlet .monaco-findInput .input:-ms-input-placeholder { opacity: 0; }
+
 :global .search-viewlet .search-widget {
-	height: 45px;
+	border-bottom: 1px c_cool_dark_gray_2 solid;
+	height: input_group_height;
 }
 
 :global .search-viewlet .monaco-count-badge {
-	background-color: #233043 !important;
+	background-color: c_cool_dark_gray !important;
+    display: inline-block !important;
+	min-width: 24px;
+    height: 24px;
+    font-size: 1rem;
+    line-height: 1rem;
+    vertical-align: text-bottom;
 }
 
 :global .search-viewlet {
 	font-size: 1rem;
+}
+
+:global .search-viewlet .messages {
+	margin-top: 0;
+}
+
+:global .search-viewlet .message {
+	opacity: 1 !important;
+}
+
+:global .search-viewlet .message p {
+	padding: 12px 0 !important;
+}
+
+:global .search-viewlet .query-details {
+	display: none;
+}
+
+:global .monaco-tree:focus {
+	outline: none;
+}
+
+:global .search-viewlet .filematch .monaco-left-right-widget .right {
+	float: left;
+	margin-left: -12px;
+}
+
+:global .search-viewlet .results .monaco-tree-row.has-children {
+	font-weight: bold;
+}
+
+:global .search-viewlet .results .monaco-tree-row.selected {
+	background-color: c_cool_dark_gray !important;
+}
+
+:global .search-viewlet .results .monaco-tree-row.selected .monaco-count-badge {
+	background-color: c_cool_mid_gray !important;
+	color: c_cool_dark_gray;
+}
+
+:global .search-viewlet .results .monaco-tree-row:not(.has-children) {
+	padding-left: 58px !important;
 }
