--- a/ui/web_modules/sourcegraph/workbench/styles/searchViewlet.css
+++ b/ui/web_modules/sourcegraph/workbench/styles/searchViewlet.css
@@ -1,7 +1,8 @@
 @value colors "sourcegraph/components/styles/_colors.css";
-@value c_cool_gray, c_cool_mid_gray, c_cool_dark_gray, c_cool_dark_gray_2, c_cool_pale_gray from colors;
+@value c_blue, c_black_30, c_cool_gray, c_cool_mid_gray, c_cool_dark_gray, c_cool_dark_gray_2, c_cool_pale_gray from colors;
 
 @value input_group_height: 72px;
+@value results_row_height: 40px;
 
 /* Hide unused elements */
 :global .search-viewlet .primary-action-bar .actions-container,
@@ -72,7 +73,7 @@
 }
 
 :global .search-viewlet .results .monaco-tree-row .sub-content {
-	line-height: 2.5rem !important;
+	line-height: results_row_height !important;
 }
 
 :global .search-viewlet .results .monaco-tree-row.has-children .sub-content {
@@ -84,7 +85,11 @@
 }
 
 :global .search-viewlet .results .monaco-tree-row.selected {
-	background-color: c_cool_dark_gray !important;
+	background-color: c_blue !important;
+}
+
+:global .search-viewlet .results .monaco-tree-row.selected .findInFileMatch {
+	background-color: c_black_30 !important;
 }
 
 :global .search-viewlet .results .monaco-tree-row:not(.has-children) {
@@ -109,7 +114,7 @@
 }
 
 :global .search-viewlet .results .monaco-tree-row.selected .monaco-count-badge {
-	background-color: c_cool_mid_gray !important;
+	background-color: white !important;
 	color: c_cool_dark_gray;
 }
 
